--- a/frontend/src/app/modules/main/components/header/header.component.scss
+++ b/frontend/src/app/modules/main/components/header/header.component.scss
@@ -58,6 +58,7 @@
     .header-account {
       display: flex;
       align-items: center;
+      cursor: pointer;
 
       .account-data {
         color:#fff;
