--- a/frontend/src/app/modules/account/components/change-password/change-password.component.html
+++ b/frontend/src/app/modules/account/components/change-password/change-password.component.html
@@ -1,1 +1,13 @@
-<p>change-password works!</p>
+
+<div class="change-container">
+  <dx-form #form width="100%" [(formData)]='formData' [items]="formItems">
+  </dx-form>
+  <dx-button
+    class="change-button"
+    stylingMode="contained"
+    text="Change"
+    type="default"
+    width="50%"
+    (onClick)="submitForm()">
+  </dx-button>
+</div>
