--- a/frontend/src/app/modules/account/components/user-announcements/user-announcements.component.scss
+++ b/frontend/src/app/modules/account/components/user-announcements/user-announcements.component.scss
@@ -1,4 +1,4 @@
 @import "../../../shared/components/base-catalog/base-catalog.component.scss";
 .announcements-container {
-  width: 80%;
+  margin:20px auto;
 }
