--- a/frontend/src/app/modules/account/components/user-favorites/user-favorites.component.html
+++ b/frontend/src/app/modules/account/components/user-favorites/user-favorites.component.html
@@ -16,7 +16,7 @@
         Not Found
       </div>
       <div class="announcement-not-found__subtitle">
-        Sorry, the keyword you entered cannot be found, please check again or search with another keyword.
+        You don't have announcements yet.
       </div>
     </div>
   </ng-template>
