--- a/frontend/src/app/modules/account/components/account-root-menu/account-root-menu.component.html
+++ b/frontend/src/app/modules/account/components/account-root-menu/account-root-menu.component.html
@@ -1,11 +1,19 @@
 <div class="menu-container">
   <div *ngIf="user" class="menu__user-data user-data">
-    <ng-container *ngIf="user.image; else noImage">
-      <img class="user-data__image" [src]="getUserImage(user.image)" alt="image">
-    </ng-container>
-    <ng-template #noImage>
-      <fa-icon class="user-data__icon" [icon]="noImageIcon"></fa-icon>
-    </ng-template>
+    <div class="user-data__profile">
+      <ng-container *ngIf="user.image; else noImage">
+        <img class="user-data__image" [src]="getUserImage(user.image)" alt="image">
+      </ng-container>
+      <ng-template #noImage>
+        <fa-icon class="user-data__icon" [icon]="noImageIcon"></fa-icon>
+      </ng-template>
+      <fa-icon 
+        class="user-data__logout-icon" 
+        [icon]="signinIcon" 
+        matTooltip="Logout"
+        (click)="logoutUser()">
+      </fa-icon>
+    </div>
     <div class="user-data__name">
       {{user.first_name}} {{user.last_name}}
     </div>
