--- a/frontend/src/app/modules/account/components/user-announcements/user-announcements.component.html
+++ b/frontend/src/app/modules/account/components/user-announcements/user-announcements.component.html
@@ -16,8 +16,9 @@
         Not Found
       </div>
       <div class="announcement-not-found__subtitle">
-        Sorry, the keyword you entered cannot be found, please check again or search with another keyword.
+        You don't have announcements yet.
       </div>
     </div>
   </ng-template>
 </ng-container>
+
