--- a/frontend/src/app/modules/main/components/header/header.component.html
+++ b/frontend/src/app/modules/main/components/header/header.component.html
@@ -15,7 +15,7 @@
       </div>
     </div>
   
-    <div *ngIf="isUserAuthorized" class="header-account" [routerLink]="['/account']">
+    <div *ngIf="isUserAuthorized" class="header-account" [routerLink]="['/account/user-announcements']">
       <ng-container *ngIf="user.image; else noImage">
         <img class="account-image" [src]="getUserImage(user.image)" alt="image">
       </ng-container>
