--- a/frontend/src/app/modules/account/components/profile-management/profile-management.component.html
+++ b/frontend/src/app/modules/account/components/profile-management/profile-management.component.html
@@ -9,6 +9,17 @@
   </dx-button>
 </div>
 <div class="profile-container">
+  <div class="user-data__profile">
+    <div class="user-data__face">
+      <ng-container *ngIf="formData.image; else noImage">
+        <img class="user-data__image" [src]="getUserImage(formData.image)" alt="image">
+      </ng-container>
+      <ng-template #noImage>
+        <fa-icon class="user-data__icon" [icon]="noImageIcon"></fa-icon>
+      </ng-template>
+      <fa-icon class="user-data__edit-icon" [icon]="editIcon" (click)="loadAvatar()"></fa-icon>
+    </div>
+  </div>
   <fa-icon class="profile-edit" [icon]="editIcon" (click)="editForm()"></fa-icon>
   <dx-form #form width="100%" [(formData)]='formData' [items]="formItems" [disabled]="!isFormEditing">
   </dx-form>
