--- a/frontend/src/app/modules/auth/components/default/default.component.html
+++ b/frontend/src/app/modules/auth/components/default/default.component.html
@@ -1,4 +1,4 @@
-<img class="signin-image" src="../../../../../assets/icons/pet-search-low-resolution-logo-color-on-transparent-background.svg" alt="">
+<img class="signin-image" src="../../../../../assets/icons/pet-search-high-resolution-logo-white-on-transparent-background (1).svg" alt="">
 <div class="signin-container">
   <div class="signin-title">Let's you in</div>
     <dx-button
