--- a/frontend/src/app/modules/auth/components/login/login.component.html
+++ b/frontend/src/app/modules/auth/components/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="login-container">
   <fa-icon class="login-back" [icon]="backIcon" [routerLink]="['/sign']"></fa-icon>
+  <img class="login-image" src="../../../../../assets/icons/pet-search-high-resolution-logo-white-on-transparent-background (1).svg" alt="">
   <div class="login-title">Login to Your Account</div>
   <dx-form #form width="300px" [(formData)]='formData' [items]="formItems">
   </dx-form>
