--- a/frontend/src/app/modules/auth/components/registry/registry.component.html
+++ b/frontend/src/app/modules/auth/components/registry/registry.component.html
@@ -1,5 +1,6 @@
 <div class="registry-container">
   <fa-icon class="registry-back" [icon]="backIcon" [routerLink]="['/sign']"></fa-icon>
+  <img class="registry-image" src="../../../../../assets/icons/pet-search-high-resolution-logo-white-on-transparent-background (1).svg" alt="">
   <div class="registry-title">Create New Account</div>
   <dx-form #form width="300px" [(formData)]='formData' [items]="formItems">
   </dx-form>
