--- a/frontend/src/app/modules/main/components/header/header.component.scss
+++ b/frontend/src/app/modules/main/components/header/header.component.scss
@@ -1,5 +1,5 @@
 .header-wrapper {
-  background-color: #1B4571;
+  background-color: #262033;
 
   .header-container {
     width: 70%;
@@ -43,14 +43,14 @@
 
       .category.category-active {
         background-color: #fff;
-        border: 2px solid #1B4571;
+        border: 2px solid #fff;
 
         .category-icon {
-          color: #1B4571;
+          color: #262033;
         }
 
         .category-title {
-          color:#1B4571;
+          color:#262033;
         }
       }
     }
