--- a/frontend/src/app/modules/account/components/account-root/account-root.component.scss
+++ b/frontend/src/app/modules/account/components/account-root/account-root.component.scss
@@ -4,6 +4,7 @@
   gap: 50px;
   align-items: flex-start;
   margin: 100px auto;
+  font-family: 'Poppins', sans-serif;
 
   .account-menu {
     width: 20%;
@@ -14,8 +15,8 @@
 
     .account-data__title {
       font-size: 18px;
-      color: #1B4571;
-      border-bottom: 2px solid #1B4571;
+      color: #2fc8e2;
+      border-bottom: 2px solid #2fc8e2;
       padding-bottom: 10px;
     }
   }
