--- a/frontend/src/app/modules/auth/components/default/default.component.scss
+++ b/frontend/src/app/modules/auth/components/default/default.component.scss
@@ -14,6 +14,7 @@
     font-weight: 700;
     text-align: center;
     padding-bottom: 20px;
+    color: #262033;
   }
 
   .signin-registry {
@@ -22,7 +23,7 @@
     text-align: center;
 
     .signin-registry-link {
-      color: #1B4571;
+      color: #2fc8e2;
       cursor: pointer;
     }
   }
