--- a/frontend/src/app/modules/auth/components/login/login.component.scss
+++ b/frontend/src/app/modules/auth/components/login/login.component.scss
@@ -3,14 +3,17 @@
   margin: 0 auto;
 
   .login-back {
-    color: #1B4571;
+    color: #2fc8e2;
     cursor:pointer;
+    display:block;
+    margin-bottom:30px;
   }
 
   .login-image {
     display: block;
     margin: 0 auto;
-    padding-bottom:30px;
+    width: 200px;
+    padding-bottom: 100px;
   }
 
   .login-title {
