--- a/frontend/src/app/modules/main/components/footer/footer.component.scss
+++ b/frontend/src/app/modules/main/components/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer-wrapper {
-  background-color: #1B4571;
+  background-color: #262033;
 }
 
 .footer-container {
@@ -58,14 +58,14 @@
 
     .category.category-active {
       background-color: #fff;
-      border: 2px solid #1B4571;
+      border: 2px solid #fff;
 
       .category-icon {
-        color: #1B4571;
+        color: #262033;
       }
 
       .category-title {
-        color:#1B4571;
+        color:#262033;
       }
     }
   }
