--- a/frontend/src/app/modules/shared/components/catalog-card/catalog-card.component.html
+++ b/frontend/src/app/modules/shared/components/catalog-card/catalog-card.component.html
@@ -1,6 +1,7 @@
 <div class="announcement">
   <div class="announcement-image">
     <img src="../../../../../assets/slider/img01.jpeg" alt="Image">
+    <div *ngIf="announcement.status_id===2" class="announcement-image__closed">closed</div>
     <div *ngIf="announcement.hasOwnProperty('is_favorite')" class="announcement-image__favorite">
       <fa-icon 
         *ngIf="announcement.is_favorite"  
