Добавлена возможность загружать, изменять, удалять картирки пользователей и объявлений. Добавлена фильтрация объявлений

--- a/frontend/src/app/modules/account/components/account-root-menu/account-root-menu.component.html
+++ b/frontend/src/app/modules/account/components/account-root-menu/account-root-menu.component.html
@@ -43,3 +43,6 @@
     </div>
   </div>
 </div>
+<dx-popup *ngIf="avatarDialog" title="Upload avatar" [(visible)]="avatarDialog" width="500px" height="200px">
+  <app-upload-avatar-dialog (onCloseEvent)="closeLoadAvatar()"></app-upload-avatar-dialog>
+</dx-popup>
