--- a/frontend/src/app/modules/account/components/profile-management/profile-management.component.html
+++ b/frontend/src/app/modules/account/components/profile-management/profile-management.component.html
@@ -44,3 +44,6 @@
     </dx-button>
   </div>
 </div>
+<dx-popup *ngIf="avatarDialog" title="Upload avatar" [(visible)]="avatarDialog" width="500px" height="200px">
+  <app-upload-avatar-dialog (onCloseEvent)="closeLoadAvatar()"></app-upload-avatar-dialog>
+</dx-popup>
