--- a/frontend/src/custom-dev-styles.scss
+++ b/frontend/src/custom-dev-styles.scss
@@ -170,3 +170,7 @@
 .dx-editor-outlined.dx-texteditor-with-label.dx-textarea .dx-texteditor-input-container .dx-texteditor-input {
   padding-top:10px;
 }
+
+.dx-texteditor.dx-editor-outlined {
+  border-radius:12px;
+}
