--- a/frontend/src/app/modules/catalog/components/announcement/announcement.component.scss
+++ b/frontend/src/app/modules/catalog/components/announcement/announcement.component.scss
@@ -20,7 +20,18 @@
       position:relative;
       img {
         width: 100%;
+        height: 500px;
+        object-fit: cover;
       }
+    }
+    &__no-image {
+      width: 100%;
+      text-align: center;
+      font-size: 120px;
+      background-color: rgba(0,0,0,0.1);
+      height: 300px;
+      border-radius: 40px;
+      padding: 90px 0;
     }
     &__favorite {
       font-size: 20px;
