--- a/frontend/src/app/modules/main/components/header/header.component.scss
+++ b/frontend/src/app/modules/main/components/header/header.component.scss
@@ -16,6 +16,7 @@
     .account-image {
       width: 40px;
       height: 40px;
+      object-fit: cover;
       border-radius: 50%;
       margin-right: 5px;
     }
