--- a/frontend/src/app/modules/shared/components/catalog-card/catalog-card.component.scss
+++ b/frontend/src/app/modules/shared/components/catalog-card/catalog-card.component.scss
@@ -39,6 +39,22 @@
       padding: 5px;
       border-radius: 5px;
     }
+    &__no-image-icon {
+      width: 230px;
+      height: 185px;
+      margin: 0 auto;
+      border-radius: 40px;
+      display: block;
+      font-size: 90px;
+      background-color: rgba(0,0,0,0.1);
+
+      fa-icon {
+        font-size: 90px;
+        text-align: center;
+        display: block;
+        padding: 40px 0;
+      }
+    }
   }
 
   .announcement-title {
