Сделала чаты на socket + мелкие доработки

--- a/frontend/src/app/modules/account/components/user-favorites/user-favorites.component.html
+++ b/frontend/src/app/modules/account/components/user-favorites/user-favorites.component.html
@@ -16,7 +16,7 @@
         Not Found
       </div>
       <div class="announcement-not-found__subtitle">
-        You don't have announcements yet.
+        You don't have favorite announcements yet.
       </div>
     </div>
   </ng-template>
