--- a/frontend/src/app/modules/catalog/components/announcement/announcement.component.scss
+++ b/frontend/src/app/modules/catalog/components/announcement/announcement.component.scss
@@ -71,6 +71,13 @@
       display: flex;
       gap:20px;
       align-items: center;
+
+      img {
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+        border-radius: 50%;
+      }
     }
     &__icon {
       font-size: 40px;
