--- a/frontend/src/app/modules/shared/components/catalog-card/catalog-card.component.scss
+++ b/frontend/src/app/modules/shared/components/catalog-card/catalog-card.component.scss
@@ -1,6 +1,6 @@
 .announcement {
   width: 250px;
-  min-height: 315px;
+  height: 100%;
   border-radius: 40px;
   box-shadow: rgba(0,0,0,0.7);
   background-color: #fff;
